# ComputerGrafik

./: .gitignore  Application.cpp  Application.h  CGUtilities.cpp  CGUtilities.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  LineBoxModel.cpp  Model.cpp  Model.h  Model[1].cpp  RGBImage.cpp  SimpleRayTracer.cpp  SimpleRayTracer.h  Tank.cpp  Tank.h  Terrain.cpp  TriangleBoxModel.cpp  TriangleBoxModel.h  TriangleBoxModel[1].cpp  Vector.cpp  Vector.h  color.cpp  main.cpp  rgbimage.cpp  rgbimage.h  test1.cpp  test3.cpp  vector.cpp  vector.h
